# CookQA

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
api/: __init__.py  app.py  schemas.py
config/: howtocook-source.json  ingredient_aliases.json  pantry_staples.json  recipe-selection-mvp.txt  recipe-selection.txt
cookqa/: __init__.py  cli.py  comparison.py  config.py  generation.py  graph.py  index_store.py  models.py  ollama_client.py  pantry.py  parser.py  retrieval.py  runtime.py  service.py
docs/: INDEX_RECOVERY.md  UNFINISHED.md
evaluation/: queries.jsonl
scripts/: benchmark.py  build-indexes.ps1  cold_start.py  start.ps1
tests/: http_client.py  test_activation.py  test_api.py  test_api_query_types.py  test_benchmark.py  test_bm25.py  test_builder.py  test_builder_versions.py  test_cli.py  test_cold_start.py  test_comparison.py  test_comparison_service.py  test_config.py  test_config_models.py  test_coordinator.py  test_evaluation_dataset.py  test_faiss_store.py  test_fusion.py  test_generation.py  test_graph.py  test_index_operations.py  test_index_store.py  test_ingest.py  test_integration_services.py  test_manifest.py  test_models.py  test_neo4j_queries.py  test_neo4j_version_scope.py  test_neo4j_writer.py  test_ollama.py  test_ollama_client.py  test_p1_dense_timeout.py  test_p1_faiss_similarity.py  test_p1_model_alias.py  test_p1_ollama.py  test_p1_query_expansion.py  test_p1_regressions.py  test_p1_runtime_similarity.py  test_p1_semantics.py  (+11 more)
(+43 files in other folders)
