[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cookqa"
version = "0.1.0"
description = "Windows-local Graph RAG for Chinese recipes"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jieba>=0.42,<1",
  "neo4j>=5.25,<6",
  "numpy>=1.26,<3",
  "pydantic>=2.9,<3",
  "rank-bm25>=0.2.2,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8,<2"]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.9,<1"]

[project.scripts]
cookqa = "cookqa.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
